--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,5 +75,6 @@
 
   <!--SCRIPT-->
   <script src="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.js"></script>
+    <!--Manejar otro script-->
 </body>
 </html>
